--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.2.5",
-    "@leafygreen-ui/button": "^23.0.0",
+    "@leafygreen-ui/button": "^23.1.6",
     "@leafygreen-ui/card": "^12.0.2",
     "@leafygreen-ui/code": "^16.0.5",
     "@leafygreen-ui/icon-button": "^16.0.3",
     "@leafygreen-ui/leafygreen-provider": "^4.0.2",
     "@leafygreen-ui/modal": "^17.0.3",
+    "@leafygreen-ui/side-nav": "^17.0.1",
     "@leafygreen-ui/tabs": "^14.0.2",
-    "@leafygreen-ui/text-input": "^14.0.8",
+    "@leafygreen-ui/text-input": "^14.0.13",
     "@leafygreen-ui/tooltip": "^13.0.4",
     "@leafygreen-ui/typography": "^20.1.1",
     "geist": "^1.3.1",
