--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@fontsource/geist-mono": "^5.2.5",
     "@leafygreen-ui/button": "^23.1.6",
-    "@leafygreen-ui/card": "^12.0.2",
+    "@leafygreen-ui/card": "^12.0.9",
+    "@leafygreen-ui/checkbox": "^18.0.0",
     "@leafygreen-ui/code": "^16.0.5",
+    "@leafygreen-ui/expandable-card": "^5.0.1",
+    "@leafygreen-ui/icon": "^14.1.0",
     "@leafygreen-ui/icon-button": "^16.0.3",
     "@leafygreen-ui/leafygreen-provider": "^4.0.2",
     "@leafygreen-ui/modal": "^17.0.3",
@@ -20,7 +23,7 @@
     "@leafygreen-ui/tabs": "^14.0.2",
     "@leafygreen-ui/text-input": "^14.0.13",
     "@leafygreen-ui/tooltip": "^13.0.4",
-    "@leafygreen-ui/typography": "^20.1.1",
+    "@leafygreen-ui/typography": "^20.1.9",
     "geist": "^1.3.1",
     "next": "^14.2.25",
     "react": "^18.2.0",
