--- a/backend/timeseries/docker-compose.yml
+++ b/backend/timeseries/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   timeseries-post:  
     container_name: timeseries-post-service  
     build:  
-      context: .  # Path to your Dockerfile  
+      context: .
     ports:  
       - "9000:9000"  # Map local port 9000 to container port 9000  
     volumes:  
-      - .:/app  # Mount current directory into container for local development  
+      - ./:/timeseries  # Mount the current directory into the container  
+    working_dir: /timeseries/app  # Set the working directory inside the container  
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 9000  # Run your app directly using the mounted code  
     environment:  
-      - MONGODB_URI=${MONGODB_URI}  # MongoDB connection string from environment variable
-      - PYTHONUNBUFFERED=1  
+      - MONGODB_URI=${MONGODB_URI}  # MongoDB connection string via environment variable  
+      - PYTHONUNBUFFERED=1  # Ensures real-time logging behavior  
