--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,36 @@
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.2.5",
-    "@leafygreen-ui/button": "^23.0.0",
-    "@leafygreen-ui/card": "^12.0.2",
-    "@leafygreen-ui/code": "^16.0.5",
+    "@leafygreen-ui/banner": "^10.0.2",
+    "@leafygreen-ui/button": "^23.1.6",
+    "@leafygreen-ui/card": "^12.0.9",
+    "@leafygreen-ui/checkbox": "^18.0.0",
+    "@leafygreen-ui/code": "^16.0.6",
+    "@leafygreen-ui/combobox": "^12.0.2",
+    "@leafygreen-ui/expandable-card": "^5.0.2",
+    "@leafygreen-ui/icon": "^14.1.0",
     "@leafygreen-ui/icon-button": "^16.0.3",
     "@leafygreen-ui/leafygreen-provider": "^4.0.2",
+    "@leafygreen-ui/loading-indicator": "^4.0.3",
+    "@leafygreen-ui/logo": "^11.0.1",
     "@leafygreen-ui/modal": "^17.0.3",
-    "@leafygreen-ui/tabs": "^14.0.2",
-    "@leafygreen-ui/text-input": "^14.0.8",
+    "@leafygreen-ui/number-input": "^5.0.2",
+    "@leafygreen-ui/select": "^16.0.0",
+    "@leafygreen-ui/side-nav": "^17.0.1",
+    "@leafygreen-ui/skeleton-loader": "^3.0.2",
+    "@leafygreen-ui/tabs": "^14.2.5",
+    "@leafygreen-ui/text-input": "^14.0.13",
     "@leafygreen-ui/tooltip": "^13.0.4",
-    "@leafygreen-ui/typography": "^20.1.1",
+    "@leafygreen-ui/typography": "^20.1.9",
+    "@reduxjs/toolkit": "^2.8.2",
+    "bootstrap": "^5.3.7",
     "geist": "^1.3.1",
     "next": "^14.2.25",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-redux": "^9.2.0"
   }
 }
