--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@leafygreen-ui/combobox": "^12.0.2",
     "@leafygreen-ui/expandable-card": "^5.0.2",
     "@leafygreen-ui/icon": "^14.1.0",
-    "@leafygreen-ui/icon-button": "^16.0.3",
+    "@leafygreen-ui/icon-button": "^16.0.12",
     "@leafygreen-ui/leafygreen-provider": "^4.0.2",
     "@leafygreen-ui/loading-indicator": "^4.0.3",
     "@leafygreen-ui/logo": "^11.0.1",
@@ -29,12 +29,14 @@
     "@leafygreen-ui/skeleton-loader": "^3.0.2",
     "@leafygreen-ui/tabs": "^14.2.5",
     "@leafygreen-ui/text-input": "^14.0.13",
-    "@leafygreen-ui/tooltip": "^13.0.4",
+    "@leafygreen-ui/tooltip": "^13.0.13",
     "@leafygreen-ui/typography": "^20.1.9",
     "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
     "geist": "^1.3.1",
+    "install": "^0.13.0",
     "next": "^14.2.25",
+    "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
