--- a/backend/timeSeriesGET/Dockerfile
+++ b/backend/timeSeriesGET/Dockerfile
@@ -1,5 +1,5 @@
 # Use a lightweight Python base image  
-FROM python:3-alpine3.15
+FROM python:3.10-slim
   
 # Set the working directory in the container  
 WORKDIR /app  
