adding car state tool and migrating to use voyageAI embedding model

--- a/backend/agent/config/config.json
+++ b/backend/agent/config/config.json
@@ -1,7 +1,7 @@
 {
     "CSV_DATA": "data/csv/macro_indicators_data.csv",
     "MDB_DATABASE_NAME": "leafy_fleet",
-    "MDB_TIMESERIES_COLLECTION": "vehicle_telemetry",
+    "MDB_TIMESERIES_COLLECTION": "vehicleTelemetry",
     "DEFAULT_TIMESERIES_DATA": [
         {
             "timestamp": "2025-03-21T13:15:00Z",
@@ -22,7 +22,6 @@
     "MDB_TIMESERIES_TIMEFIELD": "timestamp",
     "MDB_TIMESERIES_GRANULARITY": "seconds",
     "DEFAULT_TIME_WINDOWS": {
-        "fuel_consumption_tool": {"days": 7},
         "vehicle_health_tool": {"hours": 24},
         "performance_analytics_tool": {"days": 30},
         "route_optimization_tool": {"days": 1},
@@ -49,7 +48,7 @@
         "role": "Fleet Management Tool Decider",
         "kind_of_data": "Fleet vehicle telemetry data and user queries about fleet operations",
         "motive": "Given the user input data and information about internal fleet management tools, decide which tool or tools to use for processing fleet data",
-        "instructions": "Analyze the user query to extract: 1) Which fleet management tool to use, 2) Time parameters (dates, periods), 3) Vehicle filters (specific cars, routes), 4) Relevant data fields. Available tools: fuel_consumption_tool, fleet_position_search_tool, only select one tool",
+        "instructions": "Analyze the user query to extract: 1) Which fleet management tool to use, 2) Time parameters (dates, periods), 3) Vehicle filters (specific cars, routes), 4) Relevant data fields. Available tools: vehicle_state_search_tool, fleet_position_search_tool, only select one of these tools",
         "rules": "Return ONLY valid JSON. Extract time references like 'last week', 'since Monday', 'past 7 days' and convert to date ranges. If no time specified, use appropriate defaults. Include vehicle filters and relevant database fields.",
         "goals": "Provide accurate tool selection with proper time parameters and filters for fleet management queries."
         },
@@ -110,7 +109,7 @@
             {"id": "process_vector_search", "tool": "agent_tools.process_vector_search_tool"},
             {"id": "persistence_node", "tool": "agent_tools.persist_data_tool"},
             {"id": "recommendation_node", "tool": "agent_tools.get_llm_recommendation_tool"},
-            {"id": "fuel_consumption_tool", "tool": "agent_tools.fuel_consumption_tool"},
+            {"id": "vehicle_state_search_tool", "tool": "query_tools.vehicle_state_search_tool"},
             {"id": "save_embedding_tool", "tool": "agent_tools.save_query_embedding_tool"},
             {"id": "fleet_position_search_tool", "tool": "query_tools.fleet_position_search_tool"}
             
@@ -119,13 +118,17 @@
             {"from": "embedding_node", "to": "vector_search_tool"},
 
             {"from": "vector_search_tool", "to": "fleet_position_search_tool"},
+            {"from": "vector_search_tool", "to": "vehicle_state_search_tool"},
             {"from": "vector_search_tool", "to": "reasoning_node"},
             
             
             {"from": "reasoning_node", "to": "save_embedding_tool"},
             
             {"from": "save_embedding_tool", "to": "fleet_position_search_tool"},
+            {"from": "save_embedding_tool", "to": "vehicle_state_search_tool"},
             
+            
+            {"from": "vehicle_state_search_tool", "to": "recommendation_node"}, 
             {"from": "fleet_position_search_tool", "to": "recommendation_node"}, 
             
             {"from": "recommendation_node", "to": "END"}
