--- a/backend/timeSeriesPOST/docker-compose.yml
+++ b/backend/timeSeriesPOST/docker-compose.yml
@@ -4,13 +4,20 @@ services:
   timeseries-post:  
     container_name: timeseries-post-service  
     build:  
-      context: .
+      context: .  
     ports:  
-      - "9000:9000"  # Map local port 9000 to container port 9000  
+      - "9002:9002"  
     volumes:  
-      - ./:/timeseries  # Mount the current directory into the container  
-    working_dir: /timeseries/app  # Set the working directory inside the container  
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 9000  # Run your app directly using the mounted code  
+      - ./:/timeseries  
+    working_dir: /timeseries/app  
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 9002  
+    env_file:  
+      - ./app/.env  
     environment:  
-      - MONGODB_URI=${MONGODB_URI}  # MongoDB connection string via environment variable  
-      - PYTHONUNBUFFERED=1  # Ensures real-time logging behavior  
+      - PYTHONUNBUFFERED=1  
+    networks:  
+      - simulation-network  # Connect to the shared network  
+  
+networks:  
+  simulation-network:  
+    external: true  # Use the external network we created  
