--- a/backend/timeSeriesPOST/requirements.txt
+++ b/backend/timeSeriesPOST/requirements.txt
@@ -11,7 +11,7 @@ exceptiongroup==1.2.2
 fastapi==0.115.11
 grandalf==0.8
 h11==0.16.0
-httpcore==1.0.7
+httpcore>=1.0.9
 httpx==0.28.1
 idna==3.10
 jmespath==1.0.1
