add a general docker compose to start all services

--- a/backend/geofenceGET/Dockerfile
+++ b/backend/geofenceGET/Dockerfile
@@ -1,11 +1,11 @@
 # Use a lightweight Python image  
 FROM python:3.10-slim  
   
-# Set the working directory inside the container  
+# Set the working directory in the container  
 WORKDIR /app  
   
-# Copy the requirements file  
-COPY app/requirements.txt ./  
+# Copy requirements file into the container  
+COPY requirements.txt . 
   
 # Install Python dependencies  
 RUN pip install --no-cache-dir -r requirements.txt  
