--- a/backend/static_service/docker-compose.yml
+++ b/backend/static_service/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.8'  
   
-services:  
-  timeseries-post:  
-    container_name: timeseries-post-service  
+static-vehicle-service:  
+  static-service:  
+    container_name: static-vehicle-service  
     build:  
       context: .
     ports:  
-      - "9002:9000"  # Map local port 9002 to container port 9000  
+      - "9006:9000"  # Map local port 9001 to container port 9000  
     volumes:  
-      - ./:/timeseries  # Mount the current directory into the container  
-    working_dir: /timeseries/app  # Set the working directory inside the container  
+      - ./:/static  # Mount the current directory into the container  
+    working_dir: /static/app  # Set the working directory inside the container  
     command: uvicorn main:app --reload --host 0.0.0.0 --port 9000  # Run your app directly using the mounted code  
     environment:  
       - MONGODB_URI=${MONGODB_URI}  # MongoDB connection string via environment variable  
