--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -106,6 +106,8 @@ services:
     networks:  
       - simulation-network  # Connect to the shared network  
   
+
+# docker create network -d bridge simulation-network
 networks:  
   simulation-network:  
     external: true  
